--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "botty-mcbotface",
   "version": "1.0.0",
   "description": "A bot for the Riot Games API Discord.",
-  "main": "js/app.js",
+  "main": "dist/app.js",
   "repository": {
     "url": "git@github.com:Querijn/BottyMcBotface.git",
     "type": "git"
+  },
+  "scripts": {
+    "start": "tsc -p . && node ./dist/app.js"
   },
   "author": "Querijn Heijmans <querijn@irule.at>",
   "license": "MIT",
   "dependencies": {
     "bufferutil": "^3.0.0",
+    "discord.js": "^11.1.0",
     "erlpack": "hammerandchisel/erlpack",
     "feed-read": "^0.0.1",
     "libsodium-wrappers": "^0.5.1",
@@ -22,13 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.22",
+    "@types/request": "^2.0.1",
     "typescript": "^2.4.2"
-  },
-  "peerDependencies": {
-    "discord.js": "^11.1.0"
-  },
-  "scripts": {
-    "compile": "tsc",
-    "start": "node js/app.js"
   }
 }
