--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "erlpack": "hammerandchisel/erlpack",
     "feed-read": "^0.0.1",
     "libsodium-wrappers": "^0.5.1",
+    "node-fetch": "^1.7.2",
     "node-opus": "^0.2.5",
     "opusscript": "^0.0.3",
     "pretty-ms": "^3.0.0",
@@ -27,8 +28,8 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.22",
+    "@types/node-fetch": "^1.6.7",
     "@types/pretty-ms": "^3.0.0",
-    "@types/request": "^2.0.1",
     "typescript": "^2.4.2"
   }
 }
