Adding info commands

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -23,5 +23,8 @@
     },
     "honeypot": {
         "reportChannel": "moderators"
+    },
+    "info": {
+        "allowedRoles": ["187653195038720000"]
     }
 }
