--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -25,6 +25,7 @@
         "reportChannel": "moderators"
     },
     "info": {
-        "allowedRoles": ["187653195038720000"]
+        "allowedRoles": ["187653195038720000"],
+        "command": "note"
     }
 }
