--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "alwaysStrict": true,
     "outDir": "dist",
     "module": "commonjs",
-    "target": "es6"
+    "target": "es6",
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
