Update default shared settings to test environment.

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,5 +1,5 @@
 {
-    "server": "187652476080488449",
+    "server": "342988445498474498",
 
     "channelAccess": {
         "forcedChannels": ["301148922443726870", "187961895049756672", "190817288507752448"],
@@ -39,6 +39,7 @@
     },
     "logger": {
         "server": "342988445498474498",
-        "channel": "prod-bot-log"
+        "logChannel": "dev-bot-log",
+        "errorChannel": "dev-bot-error"
     }
 }
