Add missing settings

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -10,5 +10,6 @@
     "forum": { 
         "username": "<lowercase summoner name> (<region>)",
         "password": ""
-    }
+    },
+    "isProduction": false
 }
