--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -25,7 +25,7 @@
         "reportChannel": "moderators"
     },
     "info": {
-        "allowedRoles": ["187653195038720000", "187653430372728833", "350692046631206912"],
+        "allowedRoles": ["187653195038720000", "187653430372728833", "350692046631206912", "347539422943903755"],
         "command": "note"
     },
     "autoReact": {
