Add on join message

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -41,5 +41,8 @@
         "server": "342988445498474498",
         "logChannel": "dev-bot-log",
         "errorChannel": "dev-bot-error"
+    },
+    "onJoin": {
+        "messageFile": "data/message.markdown"
     }
 }
