Initial setup. Doesn't send the reply yet.

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -10,6 +10,12 @@
     "forum": { 
         "username": "<lowercase summoner name> (<region>)",
         "password": ""
+    "riotApi": {
+        "key": "RGAPI-350560a5-51b7-4dc1-b8e3-6a1b967bf243"
+    },
+    "webServer": {
+        "relativeFolderLocation": "www/",
+        "relativeLiveLocation": "http://thuis.irule.at/"
     },
     "isProduction": false
 }
