--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -57,5 +57,8 @@
     },
     "onJoin": {
         "messageFile": "data/message.markdown"
+    },
+    "apiUrlInterpreter": {
+        "timeOutDuration": 10800000
     }
 }
