Fix some issues, support endpoints without an app ratelimit

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -15,7 +15,7 @@
     },
     "webServer": {
         "relativeFolderLocation": "www/",
-        "relativeLiveLocation": "http://thuis.irule.at/"
+        "relativeLiveLocation": "https://irule.at/riot/api/"
     },
     "isProduction": false
 }
