Remove inactive key

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -11,7 +11,7 @@
         "username": "<lowercase summoner name> (<region>)",
         "password": ""
     "riotApi": {
-        "key": "RGAPI-350560a5-51b7-4dc1-b8e3-6a1b967bf243"
+        "key": ""
     },
     "webServer": {
         "relativeFolderLocation": "www/",
