--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,9 +1,14 @@
 {
     "server": "342988445498474498",
-
     "channelAccess": {
-        "forcedChannels": ["301148922443726870", "187961895049756672", "190817288507752448"],
-        "restrictedChannels": ["190817288507752448"]
+        "forcedChannels": [
+            "301148922443726870",
+            "187961895049756672",
+            "190817288507752448"
+        ],
+        "restrictedChannels": [
+            "190817288507752448"
+        ]
     },
     "uptimeSettings": {
         "checkInterval": 60000
@@ -17,16 +22,33 @@
         "reportChannel": "moderators"
     },
     "forum": {
-        "checkInterval":10000,
-        "channel":"external-activity",
-        "url":"http://discussion.developer.riotgames.com/"
+        "checkInterval": 10000,
+        "channel": "external-activity",
+        "url": "http://discussion.developer.riotgames.com/"
     },
     "honeypot": {
         "reportChannel": "moderators"
     },
     "info": {
-        "allowedRoles": ["187653195038720000", "187653430372728833", "350692046631206912", "347539422943903755"],
+        "allowedRoles": [
+            "187653195038720000",
+            "187653430372728833",
+            "350692046631206912",
+            "347539422943903755"
+        ],
         "command": "note"
+    },
+    "officehours": {
+        "allowedRoles": [
+            "187653195038720000",
+            "187653430372728833",
+            "350692046631206912",
+            "347539422943903755"
+        ],
+        "openMessage": "Office Hours is now open!",
+        "closeMessage": "Office Hours is now closed!",
+        "addedMessage": "Your question is added to the queue, I will tag you with this message the next time Office Hour opens!",
+        "removedMessage": "The question has been removed"
     },
     "autoReact": {
         "emoji": "408527155891273738"
@@ -47,8 +69,10 @@
         "apiOnFireThreshold": 0.1,
         "statusUrl": "http://querijn.codes/api_status/1.1/",
         "command": "status",
-        "aliases": ["apistatus"],
-        "onFireImages": [    
+        "aliases": [
+            "apistatus"
+        ],
+        "onFireImages": [
             "https://media.giphy.com/media/dbtDDSvWErdf2/giphy.gif",
             "https://media.giphy.com/media/nLhdSinRtaL2E/giphy.gif",
             "https://i.imgur.com/Ufq47yf.gif",
