--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -45,10 +45,10 @@
             "350692046631206912",
             "347539422943903755"
         ],
-        "openMessage": "Office Hours is now open!",
-        "closeMessage": "Office Hours is now closed!",
-        "addedMessage": "Your question is added to the queue, I will tag you with this message the next time Office Hour opens!",
-        "removedMessage": "The question has been removed"
+        "openMessage": "OFFICE HOURS OPEN\nThis channel is not for discussion, only for questions related to your app or the API as a whole. This channel should be used instead of PMing Rioters.",
+        "closeMessage": "OFFICE HOURS CLOSED\nIf you wish to ask a question to a Rioter, send {botty} a `!ask <your question>` command. You will be mentioned the next time this channel opens.\nIf you don't have a question, but you would like to be here for the next time, react with a `:raised_hand:`",
+        "addedMessage": "Your question is added to the queue, I will tag you with this message the next time #office-hours opens!",
+        "removedMessage": "The question has been removed."
     },
     "autoReact": {
         "emoji": "408527155891273738"
