Add missing error message

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -57,7 +57,8 @@
             "!libraries"
         ],
         "noLanguage": "No libraries found for language: ",
-        "languageList": "I have libraries for one of the following languages: {languages}, choose one you like and reply with `!libs <your language>`",
+        "languageList": "I have libraries for one of the following languages: {languages}\nChoose one you like and reply with `!libs <your language>`.",
+        "githubError": "I tried to get the language from Github, but Github replied with status code ",
         "baseURL":"https://api.github.com/repos/WxWatch/riot-api-libraries/contents/libraries/"
     },
     "autoReact": {
