Add personal setting options

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -11,5 +11,9 @@
         "username": "<lowercase summoner name> (<region>)",
         "password": ""
     },
+    "github": { 
+        "clientId": "",
+        "clientSecret": ""
+    },
     "isProduction": false
 }
