nicer format, better results from github with authentication

--- a/settings/personal_settings.json
+++ b/settings/personal_settings.json
@@ -12,8 +12,8 @@
         "password": ""
     },
     "github": { 
-        "clientId": "",
-        "clientSecret": ""
+        "username": "Querijn",
+        "password": ""
     },
     "isProduction": false
 }
