remove reference to this.bot in officehours

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,7 +1,8 @@
 {
     "server": "342988445498474498",
     "botty": {
-        "prefix": "!"
+        "prefix": "!",
+        "nickname":"Botty McBotface"
     },
     "channelAccess": {
         "forcedChannels": [
