Separate commands from the settings

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -12,32 +12,10 @@
         ],
         "restrictedChannels": [
             "190817288507752448"
-        ],
-        "commands": [
-            {
-                "aliases": [
-                    "join"
-                ],
-                "description": "Joins a channel"
-            },
-            {
-                "aliases": [
-                    "leave"
-                ],
-                "description": "Leaves a channel"
-            }
         ]
     },
     "uptimeSettings": {
-        "checkInterval": 60000,
-        "commands": [
-            {
-                "aliases": [
-                    "uptime"
-                ],
-                "description": "Checks the uptime of botty"
-            }
-        ]
+        "checkInterval": 60000
     },
     "techBlog": {
         "checkInterval": 300000,
@@ -62,14 +40,7 @@
             "350692046631206912",
             "347539422943903755"
         ],
-        "commands": [
-            {
-                "aliases": [
-                    "note"
-                ],
-                "description": "this hasnt been changed to use the command system yet..."
-            }
-        ]
+        "command": "note"
     },
     "officehours": {
         "allowedRoles": [
@@ -78,87 +49,19 @@
             "350692046631206912",
             "347539422943903755"
         ],
-        "commands": [
-            {
-                "aliases": [
-                    "ask"
-                ],
-                "description": "Ask a question at the next #office-hours"
-            },
-            {
-                "aliases": [
-                    "ask_for"
-                ],
-                "description": "Ask a question for someone else at the next #office-hours"
-            },
-            {
-                "aliases": [
-                    "open"
-                ],
-                "description": "Open #office-hours"
-            },
-            {
-                "aliases": [
-                    "close"
-                ],
-                "description": "Close #office-hours"
-            },
-            {
-                "aliases": [
-                    "question_list"
-                ],
-                "description": "Print the list of questions waiting for #office-hours"
-            },
-            {
-                "aliases": [
-                    "question_remove"
-                ],
-                "description": "Remove a question from the list waiting for #office-hours"
-            }
-        ],
         "openMessage": "OFFICE HOURS OPEN\nThis channel is not for discussion, only for questions related to your app or the API as a whole. This channel should be used instead of PMing Rioters.",
         "closeMessage": "OFFICE HOURS CLOSED\nIf you wish to ask a question to a Rioter, send {botty} a `!ask <your question>` command. You will be mentioned the next time this channel opens.\nIf you don't have a question, but you would like to be here for the next time, react with a `:raised_hand:`",
         "addedMessage": "Your question is added to the queue, I will tag you with this message the next time #office-hours opens!",
         "removedMessage": "The question has been removed."
     },
     "riotApiLibraries": {
-        "commands": [
-            {
-                "aliases": [
-                    "lib",
-                    "libs",
-                    "libraries"
-                ],
-                "description": "Print a list of the public libraries"
-            }
-        ],
         "noLanguage": "No libraries found for language: ",
         "languageList": "I have libraries for one of the following languages: {languages}\nChoose one you like and reply with `!libs <your language>`.",
         "githubError": "I tried to get the language from Github, but Github replied with status code ",
         "baseURL": "https://api.github.com/repos/WxWatch/riot-api-libraries/contents/libraries/"
     },
     "autoReact": {
-        "emoji": "408527155891273738",
-        "commands": [
-            {
-                "aliases": [
-                    "toggle_default_thinking"
-                ],
-                "description": "Changes bottys reaction from the normal thinking emote, to one of the custom ones (or opposite)"
-            },
-            {
-                "aliases": [
-                    "toggle_react"
-                ],
-                "description": "Decides if botty reacts to your messages"
-            },
-            {
-                "aliases": [
-                    "refresh_thinking"
-                ],
-                "description": "Reloads the thinking emojis"
-            }
-        ]
+        "emoji": "408527155891273738"
     },
     "versionChecker": {
         "checkInterval": 1800000,
@@ -175,10 +78,6 @@
         "checkInterval": 300000,
         "apiOnFireThreshold": 0.1,
         "statusUrl": "http://querijn.codes/api_status/1.1/",
-        "commands": [
-            "status",
-            "apistatus"
-        ],
         "onFireImages": [
             "https://media.giphy.com/media/dbtDDSvWErdf2/giphy.gif",
             "https://media.giphy.com/media/nLhdSinRtaL2E/giphy.gif",
