--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -36,7 +36,8 @@
             "350692046631206912",
             "347539422943903755"
         ],
-        "command": "note"
+        "command": "note",
+        "maxScore": 4
     },
     "officehours": {
         "allowedRoles": [
