Remove old nickname setting
.bind command handlers so they dont need to be arrow functions

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,8 +1,7 @@
 {
     "server": "342988445498474498",
     "botty": {
-        "prefix": "!",
-        "nickname": "Botty McBotface"
+        "prefix": "!"
     },
     "commands": {
         "adminRoles": [
