move prefix setting into the commands subgroup

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -1,9 +1,7 @@
 {
     "server": "342988445498474498",
-    "botty": {
-        "prefix": "!"
-    },
     "commands": {
+        "default_prefix": "!",
         "adminRoles": [
             "187653195038720000",
             "187653430372728833",
