--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -50,7 +50,8 @@
     "riotApiLibraries": {
         "noLanguage": "No libraries found for language: ",
         "languageList": "I have libraries for one of the following languages: {languages}\nChoose one you like and reply with `!libs <your language>`.",
-        "githubError": "I tried to get the language from Github, but Github replied with status code ",
+        "githubErrorList": "I tried to get the languages from Github, but Github replied with status code ",
+        "githubErrorLanguage": "I tried to get the language from Github, but Github replied with status code ",
         "baseURL": "https://api.github.com/repos/WxWatch/riot-api-libraries/contents/libraries/"
     },
     "autoReact": {
