add common aliases for languages

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -52,7 +52,19 @@
         "languageList": "I have libraries for one of the following languages: {languages}\nChoose one you like and reply with `!libs <your language>`.",
         "githubErrorList": "I tried to get the languages from Github, but Github replied with status code ",
         "githubErrorLanguage": "I tried to get the language from Github, but Github replied with status code ",
-        "baseURL": "https://api.github.com/repos/WxWatch/riot-api-libraries/contents/libraries/"
+        "baseURL": "https://api.github.com/repos/WxWatch/riot-api-libraries/contents/libraries/",
+        "aliases": {
+            "javascript": [
+                "js",
+                "ts",
+                "typescript"
+            ],
+            "c-sharp": [
+                ".net",
+                "vb",
+                "c#"
+            ]
+        }
     },
     "autoReact": {
         "emoji": "408527155891273738"
