Set default server to our test server and as a string

--- a/private/shared_settings.json
+++ b/private/shared_settings.json
@@ -1,5 +1,5 @@
 {
-    "server": 424563137312981013,
+    "server": "342988445498474498",
     "botty": {
         "discord": {
             "key": "",
