Schedule schema update in Endpoint and use Levenshtein Distance from src/LevenshteinDistance.ts

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -127,6 +127,7 @@
     },
     "endpoint": {
         "updateInterval": 86400,
+        "timeOutDuration": 10800000,
         "baseUrl": "https://developer.riotgames.com/api-methods/#",
         "maxDistance": 3,
         "aliases": {
