--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "feed-read": "^0.0.1",
     "node-fetch": "^1.7.2",
     "pretty-ms": "^3.0.0",
-    "to-markdown": "^3.1.0",
+    "turndown": "^4.0.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "uws": "9.14.0"
   },
   "devDependencies": {
