Add csharp alias

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -93,7 +93,8 @@
                 "ts"
             ],
             "c-sharp": [
-                "c#"
+                "c#",
+                "csharp"
             ],
             "objective-c": [
                 "objc"
