Make sure we can adjust the appname of the PM2 process

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -24,7 +24,8 @@
             "username": "Querijn",
             "password": ""
         },
-        "isProduction": false
+        "isProduction": false,
+        "appName": "app"
     },
     "commands": {
         "default_prefix": "!",
