--- a/private/shared_settings.json
+++ b/private/shared_settings.json
@@ -3,16 +3,28 @@
     "botty": {
         "discord": {
             "key": "",
-            "owner": 95265940081475584
+            "owner": 132268173432061952
+        },
+        "honeypot": {
+            "token": "",
+            "owner": 132268173432061952
         },
         "forum": {
             "username": "<lowercase summoner name> (<region>)",
             "password": ""
         },
+        "riotApi": {
+            "key": ""
+        },
+        "webServer": {
+            "relativeFolderLocation": "www/",
+            "relativeLiveLocation": "https://irule.at/riot/api/"
+        },
         "github": {
             "username": "Querijn",
             "password": ""
         },
-        "isProduction": false
+        "isProduction": false,
+        "appName": "app"
     }
 }
