Revert "Various fixes to the esports api and the private settings file"

--- a/private/shared_settings.json
+++ b/private/shared_settings.json
@@ -3,28 +3,16 @@
     "botty": {
         "discord": {
             "key": "",
-            "owner": 132268173432061952
-        },
-        "honeypot": {
-            "token": "",
-            "owner": 132268173432061952
+            "owner": 95265940081475584
         },
         "forum": {
             "username": "<lowercase summoner name> (<region>)",
             "password": ""
         },
-        "riotApi": {
-            "key": ""
-        },
-        "webServer": {
-            "relativeFolderLocation": "www/",
-            "relativeLiveLocation": "https://irule.at/riot/api/"
-        },
         "github": {
             "username": "Querijn",
             "password": ""
         },
-        "isProduction": false,
-        "appName": "app"
+        "isProduction": false
     }
 }
