--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -150,5 +150,14 @@
                 "league-status"
             ]
         }
+    },
+    "pickem": {
+        "leaderboardUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_vs_lists/series/{series}/user/{user}",
+        "groupPickUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_group_picks/series/{series}/user/{user}",
+        "bracketsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_bracket_picks/series/{series}/user/{user}",
+        "pointsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_points/series/{series}?user=",
+        "worldsId": 5,
+        "blankId": 4643536,
+        "updateTimeout": 3600000
     }
 }
