--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -159,6 +159,7 @@
         "worldsId": 5,
         "blankId": 4643536,
         "listId": 619532,
-        "updateTimeout": 3600000
+        "updateTimeout": 3600000,
+        "printMode": "BRACKET"
     }
 }
