Add remaining settings to the config

--- a/private/shared_settings.json
+++ b/private/shared_settings.json
@@ -13,6 +13,14 @@
             "username": "Querijn",
             "password": ""
         },
-        "isProduction": false
+        "riotApi": {
+            "key": ""
+        },
+        "webServer": {
+            "relativeFolderLocation": "www/",
+            "relativeLiveLocation": "my.cool.url"
+        },
+        "isProduction": false,
+        "appName":"app"
     }
 }
