--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bufferutil": "^3.0.0",
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "11.3.2",
+    "evenin": "^1.0.0",
     "feed-read": "^0.0.1",
     "moment": "^2.22.2",
     "node-fetch": "^1.7.2",
