--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "type": "git"
   },
   "scripts": {
-    "compile": "tslint -p . && tsc -p .",
+    "compile": "tsc -p .",
     "start": "tsc -p . && node ./dist/app.js"
   },
   "author": "Querijn Heijmans <querijn@irule.at>",
   "license": "MIT",
   "dependencies": {
+    "@types/fs-extra": "^5.0.4",
     "bufferutil": "^3.0.0",
     "cheerio": "^1.0.0-rc.2",
     "crc-32": "^1.2.0",
     "discord.js": "11.3.2",
     "feed-read": "^0.0.1",
+    "fs-extra": "^7.0.1",
     "html2plaintext": "^2.1.0",
     "moment": "^2.22.2",
     "node-fetch": "^1.7.2",
