--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -120,7 +120,8 @@
             "objective-c": [
                 "objc"
             ]
-        }
+        },
+        "checkInterval": 10800000
     },
     "autoReact": {
         "emoji": "408527155891273738"
@@ -166,7 +167,7 @@
         "baseUrl": "https://developer.riotgames.com/api-methods/#",
         "maxDistance": 3,
         "aliases": {
-            "lol-status-v3": [
+            "lol-status-v4": [
                 "league-status"
             ]
         }
