--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -27,6 +27,13 @@
         "isProduction": false,
         "appName": "app"
     },
+    "lookup": {
+        "refreshTimeout": 86400000,
+        "championUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-summary.json",
+        "skinUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/skins.json",
+        "perkUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/perks.json",
+        "itemUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/items.json"
+    },
     "commands": {
         "default_prefix": "!",
         "adminRoles": [
