value ids and names differently

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -32,7 +32,10 @@
         "championUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/champion-summary.json",
         "skinUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/skins.json",
         "perkUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/perks.json",
-        "itemUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/items.json"
+        "itemUrl": "https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default/v1/items.json",
+        "textConfidence": 3,
+        "numberConfidence": 1,
+        "returnedEntryCount": 3
     },
     "commands": {
         "default_prefix": "!",
