Check if the user posted a riot games or league of legends url before spam-killing

--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -196,5 +196,11 @@
         "listId": 619532,
         "updateTimeout": 3600000,
         "printMode": "BRACKET"
+    },
+    "spam": {
+        "allowedUrls": [
+            "riotgames.com",
+            "leagueoflegends.com"
+        ]
     }
 }
