--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.22.2",
     "node-fetch": "^1.7.2",
     "pretty-ms": "^3.0.0",
+    "striptags": "^3.1.1",
     "turndown": "^4.0.2",
     "turndown-plugin-gfm": "^1.0.2",
     "uws": "9.14.0",
