--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -191,11 +191,11 @@
         "groupPickUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_group_picks/series/{series}/user/{user}",
         "bracketsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_bracket_picks/series/{series}/user/{user}",
         "pointsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_points/series/{series}?user=",
-        "worldsId": 5,
+        "worldsId": 6,
         "blankId": 4643536,
-        "listId": 619532,
+        "listId": 783467,
         "updateTimeout": 3600000,
-        "printMode": "BRACKET"
+        "printMode": "GROUP"
     },
     "spam": {
         "allowedUrls": [
