--- a/settings/shared_settings.json
+++ b/settings/shared_settings.json
@@ -193,7 +193,7 @@
         "pointsUrl": "https://pickem.euw.lolesports.com/en-GB/api/get_points/series/{series}?user=",
         "worldsId": 6,
         "blankId": 4643536,
-        "listId": 783467,
+        "listId": [783467, 829304],
         "updateTimeout": 3600000,
         "printMode": "GROUP"
     },
